--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,13 @@
-
-/* Your CSS Code here. */
 .holder{
-	display: grid;
-	grid-template-columns:repeat(2,100px);
-	grid-template-rows:repeat(2,100px);
+    display: flex;
+    justify-content: space-between; 
+    flex-wrap: wrap;
+
 }
-.item-1{
-	background:red;
-}
-.item-2{
-	background:green;
-}
-.item-3{
-	background:greenyellow;
-}
-.item-4{
-	background:skyblue;
-}
+.box{
+ width: 200px;
+ height: 200px;
+ background-color: limegreen;
+ text-align: center;
+ line-height: 200px;
+ }
